# ipu-redfish

./: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  LICENSE.md  README.md  build_main.sh  clean.sh  doxygen-dev.config  doxygen.config
application/: CMakeLists.txt  doxygen-dev.config  doxygen.config
application/config/: ca.crt  imc-redfish-configuration.json  ipu-redfish-generate-password-hash.sh  ipu-redfish-generate-test-certs.sh  ipu-redfish-gnutls.ini  ipu-redfish-service.sh  ipu-redfish-upgrade-config.py  server.crt  server.key
application/examples/: CMakeLists.txt
application/include/: app.hpp  context.hpp  update_version.sh
application/include/psme/ipu/: acc_boot_option_getter.hpp  acc_boot_option_handler.hpp  acc_boot_option_setter.hpp  acc_boot_override_handler.hpp  base_handler.hpp  base_service.hpp  cpchnl_cmd_handler.hpp  curl_handler.hpp  firmware_build_getter.hpp  imc_reset_handler.hpp  ipu_constants.hpp  ipu_update.hpp  ipu_update_handler.hpp  loader.hpp  reserved_memory_json.hpp  service.hpp  simple_update_handler.hpp  virtual_media_eject_handler.hpp  virtual_media_insert_handler.hpp
application/include/psme/rest/: rest_server.hpp
application/include/psme/rest/constants/: chassis.hpp  constants.hpp  constants_templates.hpp  routes.hpp  system.hpp  telemetry.hpp
application/include/psme/rest/endpoints/: endpoint_base.hpp  endpoint_builder.hpp  endpoints.hpp  event_service.hpp  event_subscription.hpp  event_subscriptions_collection.hpp  message_registry.hpp  message_registry_file.hpp  message_registry_file_collection.hpp  metadata.hpp  metadata_root.hpp  odata_service_document.hpp  path_builder.hpp  redfish.hpp  root.hpp  session.hpp  session_collection.hpp  session_service.hpp  simple_update.hpp  simple_update_action_info.hpp  update_service.hpp  utils.hpp
application/include/psme/ssdp/: ssdp_config_loader.hpp
application/src/: CMakeLists.txt  app.cpp  context.cpp  main.cpp
application/src/ipu/: CMakeLists.txt  acc_boot_option_getter.cpp  acc_boot_option_handler.cpp  acc_boot_option_setter.cpp  acc_boot_override_handler.cpp  base_service.cpp  cpchnl_cmd_handler.cpp  cpchnl_cmd_handler_stub.cpp  curl_handler.cpp  firmware_build_getter.cpp  imc_reset_handler.cpp  ipu_constants.cpp  ipu_update.cpp  ipu_update_handler.cpp  ipu_update_handler_stub.cpp  loader.cpp  service.cpp  simple_update_handler.cpp  virtual_media_eject_handler.cpp  virtual_media_insert_handler.cpp
application/src/rest/: CMakeLists.txt  rest_server.cpp
application/src/rest/constants/: chassis.cpp  constants.cpp  constants_templates.cpp  routes.cpp  system.cpp  telemetry.cpp
application/src/rest/endpoints/: endpoint_base.cpp  endpoint_builder.cpp  event_service.cpp  event_subscription.cpp  event_subscriptions_collection.cpp  message_registry.cpp  message_registry_file.cpp  message_registry_file_collection.cpp  metadata.cpp  metadata_root.cpp  odata_service_document.cpp  path_builder.cpp  redfish.cpp  root.cpp  session.cpp  session_collection.cpp  session_service.cpp  simple_update.cpp  simple_update_action_info.cpp  update_service.cpp  utils.cpp
application/src/rest/eventing/: event.cpp  event_array.cpp  event_array_queue.cpp  event_service.cpp  rest_client.cpp
application/src/rest/metadata/: CMakeLists.txt  metadata_manager.cpp
application/src/rest/model/: model.cpp  resource_handler.cpp
application/src/rest/server/: content_types.cpp  http_headers.cpp  methods_handler.cpp  multiplexer.cpp  parameters.cpp  request.cpp  response.cpp  status.cpp  utils.cpp
application/src/rest/utils/: time_utils.cpp
application/src/rest/validators/: json_validator.cpp
application/src/ssdp/: CMakeLists.txt  ssdp_config_loader.cpp
application/tests/: CMakeLists.txt
application/tests/endpoints/: CMakeLists.txt
application/tests/endpoints/eventing/: event_array.cpp  subscriptions.cpp
application/tests/rest/: CMakeLists.txt
application/tests/rest/endpoints/: id_parsing_test.cpp  query_entries_test.cpp  utils.cpp  utils.hpp  utils_path_builder_test.cpp
application/tests/rest/error/: error_factory_test.cpp
application/tests/rest/model/: find_test.cpp
application/tests/rest/server/: multiplexer_test.cpp
application/tests/rest/ssdp/: ssdp_config_loader_test.cpp
application/tests/rest/utils/: health_rollup_test.cpp
application/tests/rest/validator/: json_validator_test.cpp
docs/: conf.py  (+10 more)
libs/agent-framework/: CMakeLists.txt
libs/agent-framework/database/: CMakeLists.txt
libs/agent-framework/discovery/: CMakeLists.txt
libs/agent-framework/include/agent-framework/: logger_loader.hpp  message.hpp  signal.hpp
libs/agent-framework/src/: CMakeLists.txt  logger_loader.cpp  signal.cpp
libs/agent-framework/src/action/: CMakeLists.txt  task.cpp  task_creator.cpp  task_result_manager.cpp  task_runner.cpp
libs/agent-framework/src/exceptions/: CMakeLists.txt  error_codes.cpp  gami_exception.cpp  invalid_field.cpp  invalid_uuid.cpp  invalid_value.cpp  method_conflict.cpp  not_found.cpp  not_implemented.cpp
libs/agent-framework/src/module/: CMakeLists.txt  chassis_components.cpp  common_components.cpp  compute_components.cpp  service_uuid.cpp  storage_components.cpp
libs/agent-framework/src/threading/: CMakeLists.txt  thread.cpp  threadpool.cpp
libs/agent-framework/src/validators/: CMakeLists.txt  procedure_validator.cpp
libs/agent-framework/tests/: CMakeLists.txt
libs/agent-framework/tests/configuration/: CMakeLists.txt  utils_test.cpp
libs/agent-framework/tests/mocks/: CMakeLists.txt  mock_logger_ext.cpp  mock_logger_ext.hpp
libs/agent-framework/tests/module/: CMakeLists.txt  enum_builder_test.cpp  generic_manager_test.cpp  iso8601_time_interval_test.cpp  obj_reference_test.cpp  optional_values_test.cpp  persistent_uuid_generation_test.cpp  task_test.cpp  to_hex_string_test.cpp
libs/agent-framework/tests/validators/: CMakeLists.txt  procedure_validator_test.cpp
libs/configuration/: CMakeLists.txt
libs/configuration/include/configuration/: configuration.hpp  configuration_schema.hpp  utils.hpp
libs/configuration/src/: configuration.cpp  utils.cpp
(+686 files in other folders)
